Homepage|Fixed: Comparative alignment mismatch with news vs forum items
When compositing news on the homepage insert a real line break after
the header rather than expanding the margin. Doing it this way has
several benefits:
- Ensure appropriate formatting in the absence of styling
- Line spacing is automatically correct
- Ensure empty content blocks are formatted consistently with those
containing content

--- a/web/style.css
+++ b/web/style.css
@@ -228,10 +228,6 @@ hr.dashed {
     margin-top: 0;
 }
 
-.block article header {
-    margin-bottom: .8em;
-}
-
 /* metadata */
 .block article header p {
     font-style: italic;
@@ -344,7 +340,7 @@ table.table1 tbody td {
 .topiclist li.header {
     border-width: 0;
     color: white;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 300;
     text-shadow: 0px 1px 1px #666;
     white-space: nowrap;
